--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "mongodb": "^6.17.0",
     "motion": "^12.7.4",
     "next": "15.2.4",
     "next-auth": "5.0.0-beta.29",
