--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
     "@heroicons/react": "^2.2.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "mongodb": "^6.17.0",
     "motion": "^12.7.4",
